--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,7 @@ body {
 
 .gradient-text {
     background-color: white;
-    background-image: linear-gradient(45deg, #a8ff78,#78ffd6  );
+    background-image: linear-gradient(45deg, hsl(40, 100%, 72%),hsl(62, 100%, 72%)  );
     background-size: 100%;
     background-repeat: repeat;
   
@@ -76,6 +76,9 @@ body {
     font-size: 60px;
     font-weight: 400;
     letter-spacing: 35px;
+    animation-name: moveInLeft;
+    animation-duration: 1s;
+    animation-timing-function: ease-out;
 }
 
 .heading-primary-sub {
@@ -83,4 +86,38 @@ body {
     font-size: 20px;
     font-weight: 700;
     letter-spacing: 17.4px;
+    animation: moveInRight 1s ease-out;
+}
+
+@keyframes moveInLeft {
+    0% {
+        opacity: 0;
+        transform: translateX(-100px);
+    }
+
+    80% {
+        transform: translateX(10px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translate(0);
+    }
+}
+
+@keyframes moveInRight {
+    0% {
+        opacity: 0;
+        transform: translateX(100px);
+    }
+
+    80% {
+        transform: translateX(-10px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translate(0);
+    }
+    
 }
