--- a/css/main.css
+++ b/css/main.css
@@ -1,25 +1,54 @@
-/*
-COLORS:
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap');
 
-Light green: #7ed56f
-Medium green: #55c57a
-Dark green: #28b485
+@keyframes moveInLeft {
+    0% {
+        opacity: 0;
+        transform: translateX(-10rem);
+    }
 
-*/
+    80% {
+        transform: translateX(1rem);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translate(0);
+    }
+}
+
+@keyframes moveInRight {
+    0% {
+        opacity: 0;
+        transform: translateX(10rem);
+    }
+
+    80% {
+        transform: translateX(-1rem);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translate(0);
+    }
+    
+}
 
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: inherit;
 }
 
+html {
+    font-size: 62.5%;
+}
 body {
     font-family: 'DM Sans', sans-serif;
     font-weight: 400;
-    font-size: 16px;
     line-height: 1.7;
     color: hsl(0, 0%, 47%);
-    padding: 30px;
+    padding: 3rem;
+    box-sizing: border-box;
 }
 
 .header {
@@ -36,22 +65,15 @@ body {
     position: relative;
 }
 
-.logo-box {
+.header__logo-box {
     position: absolute;
-    top: 40px;
-    left: 40px;
+    top: 4rem;
+    left: 4rem;
 }
+
 
 .logo {
-    height: 35px;
-}
-
-.text-box {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
+    height: 3.5rem;
 }
 
 .gradient-text {
@@ -59,65 +81,95 @@ body {
     background-image: linear-gradient(45deg, hsl(40, 100%, 72%),hsl(62, 100%, 72%)  );
     background-size: 100%;
     background-repeat: repeat;
-  
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent; 
     -moz-background-clip: text;
     -moz-text-fill-color: transparent;
   }
 
-.heading-primary {
-    color: #fff;
-    text-transform: uppercase;
+.header__text-box {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
 }
 
-.heading-primary-main {
+.heading-primary {
     display: block;
-    font-size: 60px;
+    color: white;
+    text-transform: uppercase;
+    backface-visibility: hidden;
+    margin-bottom: 6rem;
+}
+
+.heading-primary--main {
+    display: block;
+    font-size: 6rem;
     font-weight: 400;
-    letter-spacing: 35px;
+    letter-spacing: 3.5rem;
     animation-name: moveInLeft;
     animation-duration: 1s;
     animation-timing-function: ease-out;
 }
 
-.heading-primary-sub {
+.heading-primary--sub {
     display: block;
-    font-size: 20px;
+    font-size: 2rem;
     font-weight: 700;
-    letter-spacing: 17.4px;
+    letter-spacing: 1.75rem;
     animation: moveInRight 1s ease-out;
 }
 
-@keyframes moveInLeft {
-    0% {
-        opacity: 0;
-        transform: translateX(-100px);
-    }
 
-    80% {
-        transform: translateX(10px);
-    }
 
-    100% {
-        opacity: 1;
-        transform: translate(0);
-    }
+.btn:link,
+.btn:visited {
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 1.5rem 4rem;
+    display: inline-block;
+    border-radius: 1rem;
+    transition: ease-out .1s;
+    position: relative;
+    font-size: 1.6rem;
 }
 
-@keyframes moveInRight {
-    0% {
-        opacity: 0;
-        transform: translateX(100px);
-    }
+.btn:hover {
+    transform: translateY(--.2rem);
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, .2);
+}
 
-    80% {
-        transform: translateX(-10px);
-    }
+.btn:active {
+    transform: translateY(0);
+    box-shadow: 0 .2rem .5rem rgba(0, 0, 0, .2);
+}
 
-    100% {
-        opacity: 1;
-        transform: translate(0);
-    }
+.btn--white {
+    background: linear-gradient(90deg, hsl(40, 100%, 72%), transparent) hsl(62, 100%, 72%) ;
+    color: hsl(0, 0%, 47%);
+}
+
+.btn::after {
+    content: "";
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    border-radius: 1rem;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: all .4s;
     
 }
+
+.btn--white::after {
+    background: linear-gradient(90deg, hsl(40, 100%, 72%), transparent) hsl(62, 100%, 72%) ;
+}
+
+.btn:hover::after {
+    background: linear-gradient(30deg, hsl(40, 100%, 72%), transparent), hsl(62, 94%, 69%) ;
+    color: hsl(0, 0%, 100%);
+
+} 
