--- a/css/main.css
+++ b/css/main.css
@@ -25,42 +25,54 @@
   box-sizing: inherit; }
 
 html {
-  font-size: 62.5%; }
+  font-size: var(--base-size); }
 
 body {
   font-family: 'DM Sans', sans-serif;
   font-weight: 400;
   line-height: 1.7;
-  color: #787878;
   padding: 3rem;
   box-sizing: border-box; }
 
-.header {
-  height: 95vh;
-  background-image: linear-gradient(to right bottom, rgba(128, 214, 113, 0.8), rgba(39, 180, 133, 0.8)), url(../media/hero.jpg);
-  background-size: cover;
-  background-position: top;
-  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-  position: relative; }
-  .header__logo-box {
-    position: absolute;
-    top: 4rem;
-    left: 4rem; }
-  .header__logo {
-    height: 3.5rem; }
-  .header__text-box {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center; }
+p {
+  font-size: calc(var(--base-size) * 1);
+  line-height: calc(var(--base-size) * 1.5); }
+
+h1 {
+  font-size: var(--h1); }
+
+h2 {
+  font-size: var(--h2); }
+
+h3 {
+  font-size: var(--h3); }
+
+h4 {
+  font-size: var(--h4); }
+
+h5 {
+  font-size: var(--h5); }
+
+.row {
+  margin: 10px 0;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  --columns: 12; }
+
+[class*='col-'] {
+  --width: 1;
+  --initialbasis: calc(var(--width, 0) / var(--columns, 12) * 100%);
+  --gap: calc((var(--columns) - var(--width)) * 0.1%);
+  flex-basis: calc(var(--initialbasis) - var(--gap)); }
 
 .heading-primary {
   display: block;
   color: white;
   text-transform: uppercase;
   backface-visibility: hidden;
-  margin-bottom: 6rem; }
+  margin-bottom: 6rem;
+  margin: 0 auto; }
   .heading-primary--gradient-text {
     background-color: white;
     background-image: linear-gradient(45deg, #ffcf70, #faff70);
@@ -104,8 +116,8 @@ body {
   box-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.2); }
 
 .btn--white {
-  background: linear-gradient(90deg, #ffcf70, transparent) #faff70;
-  color: #787878; }
+  background: linear-gradient(90deg, #ffcf70, transparent), #faff70;
+  color: white; }
 
 .btn::after {
   content: '';
@@ -120,8 +132,64 @@ body {
   transition: all 0.4s; }
 
 .btn--white::after {
-  background: linear-gradient(90deg, #ffcf70, transparent) #faff70; }
+  background: linear-gradient(90deg, var(#ffcf70), transparent) #faff70; }
 
 .btn:hover::after {
-  background: linear-gradient(30deg, #ffcf70, transparent), #f5fa66;
+  background: linear-gradient(30deg, var(#ffcf70), transparent) #faff70;
   color: white; }
+
+.header {
+  height: 95vh;
+  background-image: linear-gradient(to right bottom, rgba(128, 214, 113, 0.8), rgba(39, 180, 133, 0.8)), url(../media/hero.jpg);
+  background-size: cover;
+  background-position: top;
+  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+  position: relative; }
+  .header__logo-box {
+    position: absolute;
+    top: 4rem;
+    left: 4rem; }
+  .header__logo {
+    height: 3.5rem; }
+  .header__text-box {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center; }
+
+.col-1 {
+  --width: 3;
+  background-color: blue; }
+
+.col-2 {
+  --width: 6;
+  background-color: blueviolet; }
+
+.col-3 {
+  --width: 9;
+  background-color: orchid; }
+
+.col-4 {
+  --width: 12;
+  background-color: orangered; }
+
+.col-2-3 {
+  --width: 8;
+  background-color: orange; }
+
+.col-1-3 {
+  --width: 4;
+  background-color: orange; }
+
+.order-1 {
+  order: 1; }
+
+.order-2 {
+  order: 2; }
+
+.order-3 {
+  order: 3; }
+
+.order-4 {
+  order: 4; }
