--- a/css/main.css
+++ b/css/main.css
@@ -159,7 +159,7 @@ h5 {
     text-align: center; }
 
 .col-1 {
-  --width: 3;
+  --width: 12;
   background-color: blue; }
 
 .col-2 {
@@ -167,20 +167,20 @@ h5 {
   background-color: blueviolet; }
 
 .col-3 {
-  --width: 9;
+  --width: 4;
   background-color: orchid; }
 
 .col-4 {
-  --width: 12;
+  --width: 3;
   background-color: orangered; }
 
-.col-2-3 {
+.col-2of3 {
   --width: 8;
   background-color: orange; }
 
-.col-1-3 {
-  --width: 4;
-  background-color: orange; }
+.col-3of4 {
+  --width: 9;
+  background-color: yellow; }
 
 .order-1 {
   order: 1; }
